k8s/03-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: delayed-notifier
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: registry.gitlab.com/egortujmukov4683/delayed-notifier/worker:latest
        imagePullPolicy: IfNotPresent
