k8s/03-Postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: delayed-notifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:     # ссылаемся на имя PVC
          claimName: postgres-pvc
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data  # куда монтировать
        
        # healthcheck из compose можно приблизить readinessProbe/livenessProbe позже
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: delayed-notifier
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
