k8s/03-Redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: delayed-notifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:                    # ← ДОБАВЛЕНО: объявление тома
      - name: redis-storage
        persistentVolumeClaim:
          claimName: redis-pvc 
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        volumeMounts:              # ← ДОБАВЛЕНО: монтируем в контейнер
        - name: redis-storage
          mountPath: /data 
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: delayed-notifier
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
